Changed JS functionality to work using ID variables on each page (instead of using the page's URL) + Added custom scrollbar

--- a/about.html
+++ b/about.html
@@ -39,7 +39,12 @@
     </div>
 </header>
 
-<main class="about">
+<!-- CUSTOM SCROLLBAR -->
+<div id="thumb-container">
+    <img id="scrollbar-thumb" src="img/rings-logo.png" alt="audi rings icon">
+</div>
+
+<main class="about" id="about-page">
     <!-- header wrapper -->
     <div class="wrapper"></div>
     <section>
