--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,13 @@
         </nav>
     </div>
 </header>
-<main class="contact">
+
+<!-- CUSTOM SCROLLBAR -->
+<div id="thumb-container">
+    <img id="scrollbar-thumb" src="img/rings-logo.png" alt="audi rings icon">
+</div>
+
+<main class="contact" id="contact-page">
     <!-- header wrapper -->
     <div class="wrapper"></div>
 
