--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
         </nav>
     </div>
 </header>
-<main>
+
+<!-- CUSTOM SCROLLBAR -->
+<div id="thumb-container">
+    <img id="scrollbar-thumb" src="img/rings-logo.png" alt="audi rings icon">
+</div>
+
+
+<main id="home-page">
     <!-- header wrapper -->
     <div class="wrapper"></div>
 
