--- a/product.html
+++ b/product.html
@@ -39,7 +39,12 @@
     </div>
 </header>
 
-<main class="product">
+<!-- CUSTOM SCROLLBAR -->
+<div id="thumb-container">
+    <img id="scrollbar-thumb" src="img/rings-logo.png" alt="audi rings icon">
+</div>
+
+<main class="product" id="product-page">
     <!-- header wrapper -->
     <div class="wrapper"></div>
 
