--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <!-- masthead -->
     <section class="masthead">
         <div class="masthead-image" id="home-masthead-img"></div>
+        <div class="masthead-image" id="home-masthead-overlay-img"></div>
         <div class="masthead-title">
             <h1>AUDI R8</h1>
             <h2>The All-New 2023 Audi R8</h2>
