Added en engine section to the Audi R8 product page

--- a/product.html
+++ b/product.html
@@ -89,6 +89,15 @@
 
     <section class="product-img-block"></section>
 
+    <section class="specs">
+        <div class="specs-details">
+            <h3><span>5.2L V-10</span> Engine.</h3>
+            <h3><span>602 @ 8100 rpm</span> Horsepower.</h3>
+            <h3><span>413 lb-ft @ 6700 rpm</span> Torque.</h3>
+            <small>*Select 2023 Audi R8 models</small>
+        </div>
+    </section>
+
     <section class="configurations">
         <h2>Configurations</h2>
         <select id="config-menu">
@@ -157,6 +166,14 @@
             <a href="https://www.audidowntowntoronto.com/audi-concierge.htm" target="_blank" >Book a Test Drive</a>
         </div>
     </section>
+
+    <section class="engine">
+        <h2>5.2L V-10 Engine</h2>
+        <h3>The AWD model boasts a robust 602HP, 413 lb-ft torque from its 5.2L V-10 engine, while the RWD version offers 562HP, 406 lb-ft torque. Both feature a standard 7-speed S-tronic gearbox.</h3>
+    </section>
+
+    <section></section>
+
 </main>
 <footer>
     <div class="address-container">
