Added background image to the About and Contact pages, and added more breakpoint customizations to the engine section on the product page

--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,7 @@
     <section class="contact-audi">
         <h2>Questions or comments?</h2>
         <p>Please use the contact form below to contact us</p>
+        <!-- Not a functional form, just for design purposes -->
         <form id="contact-form-audi" class="contact-form" action="contact.html" enctype="multipart/form-data">
             <fieldset>
                 <label for="name-input">Name: </label>
