--- a/product.html
+++ b/product.html
@@ -172,7 +172,7 @@
         <h3>The AWD model boasts a robust 602HP, 413 lb-ft torque from its 5.2L V-10 engine, while the RWD version offers 562HP, 406 lb-ft torque. Both feature a standard 7-speed S-tronic gearbox.</h3>
     </section>
 
-    <section></section>
+    <section class="coupe-and-spyder-block"></section>
 
 </main>
 <footer>
