Changed the footer mobile layout (+ removed parallax on inventory section for mobile)

--- a/index.html
+++ b/index.html
@@ -284,7 +284,6 @@
     </section>
 </main>
 <footer>
-
     <div>
         <div class="address-container">
             <div><i class="fa-solid fa-phone"></i><small>+1 (888)-888-AUDI</small></div>
@@ -296,7 +295,7 @@
             </address>
             </div>
         </div>
-        <div>
+        <div class="action-menu">
             <ul>
                 <li><a href="https://www.audi.ca/ca/web/en/models/r8.html" target="_blank">Buy today</a></li>
                 <li><a href="https://www.audidowntowntoronto.com/audi-concierge.htm" target="_blank">Book a test drive</a></li>
