--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="./js/main.js" defer></script>
     <script src="https://kit.fontawesome.com/36e897625c.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- JQUERY -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
 <header id="header-fade-in">
@@ -283,7 +285,7 @@
         </div>
     </section>
 </main>
-<footer>
+<footer id="footer">
     <div>
         <div class="address-container">
             <div><i class="fa-solid fa-phone"></i><small>+1 (888)-888-AUDI</small></div>
