Moved the interactive car customization to its own JS file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <!-- remove custom browser styles -->
     <link rel="stylesheet" href="./css/normalize.css">
     <!-- JS -->
-    <script src="./js/main.js" defer></script>
+    <script src="./js/interactiveCarCustomization.js"></script>
+    <script src="./js/main.js"></script>
     <script src="https://kit.fontawesome.com/36e897625c.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- JQUERY -->
