--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <!-- JS -->
     <script src="./js/main.js" defer></script>
+    <script src="js/modules/header.js" defer></script>
     <script src="https://kit.fontawesome.com/36e897625c.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
