--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="./js/main.js"></script>
     <script src="js/utils/interactiveCarCustomization.js" defer></script>
     <script src="js/modules/header.js" defer></script>
+    <script src="js/modules/index.js" defer></script>
     <script src="https://kit.fontawesome.com/36e897625c.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
