Updated masthead to foggy effect with lights on scroll

--- a/index.html
+++ b/index.html
@@ -56,14 +56,29 @@
         <div class="wrapper"></div>
 
         <!-- masthead -->
-        <section class="masthead">
-            <div class="masthead-image" id="home-masthead-img"></div>
-            <div class="masthead-image" id="home-masthead-overlay-img"></div>
-            <div class="masthead-title">
-                <h1>AUDI R8</h1>
-                <h2>The All-New 2023 Audi R8</h2>
+
+        <section class="scrollLights">
+            <div class="lightsOff">
+                <div class="cloudContainer">
+                    <img class="whiteCloud" src="img/cloud-1.png" alt="floating white fog cloud" />
+                    <img class="whiteCloud" src="img/cloud-2.png" alt="floating white fog cloud" />
+                    <img class="whiteCloud" src="img/cloud-3.png" alt="floating white fog cloud" />
+                    <img class="whiteCloud" src="img/cloud-1.png" alt="floating white fog cloud" />
+                    <img class="whiteCloud" src="img/cloud-2.png" alt="floating white fog cloud" />
+                    <img class="whiteCloud" src="img/cloud-3.png" alt="floating white fog cloud" />
+                    <img class="whiteCloud" src="img/cloud-1.png" alt="floating white fog cloud" />
+                    <img class="whiteCloud" src="img/cloud-2.png" alt="floating white fog cloud" />
+                    <img class="whiteCloud" src="img/cloud-3.png" alt="floating white fog cloud" />
+                </div>
+            </div>
+            <div class="lightsOn">
+                <div class="titleContainer">
+                    <h1 class="title">2023 <span class="breakSmallScreens">AUDI R8</span></h1>
+                    <p class="subtitle">2nd Generation - The Final Edition</p>
+                </div>
             </div>
         </section>
+
 
         <!-- customize -->
         <!-- sources (images, color names, and rims/wheel names):
