Finished cleaning up the Home page

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         </div>
     </header>
 
+
+
     <!-- CUSTOM SCROLLBAR -->
     <div id="thumb-container">
         <img id="scrollbar-thumb" src="img/rings-logo.png" alt="audi rings icon">
@@ -293,9 +295,9 @@
                 <video class="video-bg" autoplay loop muted playsinline>
                     <source src="./video/r8-test-drive.mp4" type="video/mp4">
                 </video>
-                <h2>Come in and try the Audi R8 today</h2>
+                <h2>Unleash Precision Performance</h2>
                 <a href="https://www.audidowntowntoronto.com/audi-concierge.htm" target="_blank"
-                    class="test-drive-btn">Book a Test Drive</a>
+                    class="test-drive-btn">Learn More</a>
             </div>
         </section>
 
@@ -308,11 +310,7 @@
                 exterior, interior, engine, undercarriage, and road. You also receive a warranty up to 5 years,
                 or up to 100,000 km from the original in-service date.
             </p>
-            <div class="inventory-btn-container">
-                <a href="https://www.audi.ca/ca/web/en/cpo.html#layer=/ca/web/en/cpo/layer/Why-buy-certified.html"
-                    target="_blank">Learn More</a>
-                <a href="https://www.audi.ca/ca/web/en/inventory.html" target="_blank">Browse Pre-Owned Inventory</a>
-            </div>
+
         </section>
     </main>
     <footer id="footer">
