Cleaned up footer

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,90 +16,72 @@
     <script src="./js/main.js" defer></script>
     <script src="js/modules/header.js" defer></script>
     <script src="https://kit.fontawesome.com/36e897625c.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
+
 <body>
-<header id="static-header">
-    <div>
-        <a href="index.html"><img src="./img/logo.png" alt="Audi R8 logo"></a>
-    </div>
-    <!-- hamburger -->
-    <div class="hamburger">
-        <span class="burger-bar"></span>
-        <span class="burger-bar"></span>
-        <span class="burger-bar"></span>
-    </div>
-    <div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="product.html">2023 Audi R8</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
-
-<!-- CUSTOM SCROLLBAR -->
-<div id="thumb-container">
-    <img id="scrollbar-thumb" src="img/rings-logo.png" alt="audi rings icon">
-</div>
-
-<main class="about" id="about-page">
-    <!-- header wrapper -->
-    <div class="wrapper"></div>
-    <section>
-        <div class="secondary-masthead">
-            <h1>ABOUT</h1>
+    <header id="static-header">
+        <div>
+            <a href="index.html"><img src="./img/logo.png" alt="Audi R8 logo"></a>
         </div>
-    </section>
-    <section class="about-audi">
-        <h2>About the Audi R8</h2>
-        <p>The Audi R8 is a 2-seater supercar, originally introduced in 2006.
-            The mid-engine supercar features a 5.2L V-10 engine, and develops 562HP and 406 lb-ft of torque (select models).
-        It is currently available as a coupe or a convertible (spyder), and with Audi's
-        all-wheel drive system: quattro.</p>
-    </section>
-</main>
-<footer id="footer">
-    <div>
-        <div class="address-container">
-            <div><i class="fa-solid fa-phone"></i><small>+1 (888)-888-AUDI</small></div>
-            <div><i class="fa-solid fa-envelope"></i><small>info@audir8.com</small></div>
-            <div><i class="fa-solid fa-location-dot"></i><address>
-                8 Race Track Rd<br>
-                Audi City, ON<br>
-                R8R 8R8
-            </address>
+        <!-- hamburger -->
+        <div class="hamburger">
+            <span class="burger-bar"></span>
+            <span class="burger-bar"></span>
+            <span class="burger-bar"></span>
+        </div>
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="product.html">2023 Audi R8</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- CUSTOM SCROLLBAR -->
+    <div id="thumb-container">
+        <img id="scrollbar-thumb" src="img/rings-logo.png" alt="audi rings icon">
+    </div>
+
+    <main class="about" id="about-page">
+        <!-- header wrapper -->
+        <div class="wrapper"></div>
+        <section>
+            <div class="secondary-masthead">
+                <h1>ABOUT</h1>
+            </div>
+        </section>
+        <section class="about-audi">
+            <h2>About the Audi R8</h2>
+            <p>The Audi R8 is a 2-seater supercar, originally introduced in 2006.
+                The mid-engine supercar features a 5.2L V-10 engine, and develops 562HP and 406 lb-ft of torque (select
+                models).
+                It is currently available as a coupe or a convertible (spyder), and with Audi's
+                all-wheel drive system: quattro.</p>
+        </section>
+    </main>
+    <footer id="footer">
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="product.html">2023 Audi R8</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </nav>
+            <div class="img-container">
+                <img src="./img/logo.png" alt="R8 logo">
             </div>
         </div>
-        <div class="action-menu">
-            <ul>
-                <li><a href="https://www.audi.ca/ca/web/en/models/r8.html" target="_blank">Buy today</a></li>
-                <li><a href="https://www.audidowntowntoronto.com/audi-concierge.htm" target="_blank">Book a test drive</a></li>
-                <li><a href="https://www.audi.ca/ca/web/en/dealer-search.html?q=&partner_id=" target="_blank">Find a local dealer</a></li>
-            </ul>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="product.html">2023 Audi R8</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <div class="img-container">
-            <img src="./img/logo.png" alt="R8 logo">
-            <img src="./img/audi-logo.png" alt="Audi logo">
-        </div>
-    </div>
 
-    <div class="copyright-container">
-        <small>Terms and Conditions</small>
-        <small>Privacy Policy</small>
-        <small>Copyright © 2023</small>
-    </div>
-</footer>
+        <div class="copyright-container">
+            <small>Copyright © 2025 | Audi R8</small>
+        </div>
+    </footer>
 </body>
+
 </html>
