--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="product.html">2023 Audi R8</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -119,6 +118,7 @@
             <small id="wheel-choice">20" milled cut design, anthracite black wheels</small>
 
         </section>
+
 
         <!-- closeup audi logo -->
         <section class="close-up-logo"></section>
@@ -315,44 +315,20 @@
     </main>
     <footer id="footer">
         <div>
-            <div class="address-container">
-                <div><i class="fa-solid fa-phone"></i><small>+1 (888)-888-AUDI</small></div>
-                <div><i class="fa-solid fa-envelope"></i><small>info@audir8.com</small></div>
-                <div><i class="fa-solid fa-location-dot"></i>
-                    <address>
-                        8 Race Track Rd<br>
-                        Audi City, ON<br>
-                        R8R 8R8
-                    </address>
-                </div>
-            </div>
-            <div class="action-menu">
-                <ul>
-                    <li><a href="https://www.audi.ca/ca/web/en/models/r8.html" target="_blank">Buy today</a></li>
-                    <li><a href="https://www.audidowntowntoronto.com/audi-concierge.htm" target="_blank">Book a test
-                            drive</a></li>
-                    <li><a href="https://www.audi.ca/ca/web/en/dealer-search.html?q=&partner_id=" target="_blank">Find a
-                            local dealer</a></li>
-                </ul>
-            </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="product.html">2023 Audi R8</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
             <div class="img-container">
                 <img src="./img/logo.png" alt="R8 logo">
-                <img src="./img/audi-logo.png" alt="Audi logo">
             </div>
         </div>
 
         <div class="copyright-container">
-            <small>Terms and Conditions</small>
-            <small>Privacy Policy</small>
-            <small>Copyright © 2023</small>
+            <small>Copyright © 2025 | Audi R8</small>
         </div>
     </footer>
 </body>
