Added link to Learn More button

--- a/index.html
+++ b/index.html
@@ -296,8 +296,7 @@
                     <source src="./video/r8-test-drive.mp4" type="video/mp4">
                 </video>
                 <h2>Unleash Precision Performance</h2>
-                <a href="https://www.audidowntowntoronto.com/audi-concierge.htm" target="_blank"
-                    class="test-drive-btn">Learn More</a>
+                <a href="product.html" class="test-drive-btn">Learn More</a>
             </div>
         </section>
 
