Updated text on About page

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
             <p>The Audi R8 is a 2-seater supercar, originally introduced in 2006.
                 The mid-engine supercar features a 5.2L V-10 engine, and develops 562HP and 406 lb-ft of torque (select
                 models).
-                It is currently available as a coupe or a convertible (spyder), and with Audi's
+                It comes in coupe and convertible (spyder), with Audi's
                 all-wheel drive system: quattro.</p>
         </section>
     </main>
